examples/test/testpolicy6634.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy6634
  namespace: namespace351
spec:
  podSelector:
    matchLabels:
      key23: value12
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key35: value2
      podSelector:
        matchLabels:
          key1: value18
          key27: value46
          key46: value41
